...
                  style: TextStyle(
                      fontWeight: FontWeight.bold,
                      fontSize: AppFontSize.subtitle,
                      color: AppColors.primary)),
              AppSpacing.sizeBoxHt10,
              GestureDetector(
                key: const Key("doctor_details_screen_button_edit_save"),
                onTap: () {
                  setState(() {
                    areFieldsEditable = !areFieldsEditable;
                  });

                  if (!areFieldsEditable) {
...
                            fontWeight: FontWeight.bold,
                            fontSize: AppFontSize.subtitle,
                            color: AppColors.black)),
                    AppSpacing.sizeBoxHt10,
                    CustomTextField(
                        key: const Key(
                            "doctor_details_screen_textfield_firstname"),
                        onChanged: (value) {
                          firstNameTextController.text = value;
                        },
                        textHint: Strings.of(context).firstName,
                        isEditable: areFieldsEditable,
                        textEditingController: firstNameTextController),
                    CustomTextField(
                        key: const Key(
                            "doctor_details_screen_textfield_lastname"),
                        onChanged: (value) {
                          lastNameTextController.text = value;
                        },
                        textHint: Strings.of(context).lastName,
                        isEditable: areFieldsEditable,
                        textEditingController: lastNameTextController),
                    CustomTextField(
                        key: const Key(
                            "doctor_details_screen_textfield_contact_no"),
                        onChanged: (value) {
                          contactNoTextController.text = value;
                        },
                        textHint: Strings.of(context).contactNumber,
                        isEditable: areFieldsEditable,
                        textEditingController: contactNoTextController),
...
    return Scaffold(
        backgroundColor: AppColors.primary,
        appBar: AppBar(
          centerTitle: false,
          elevation: 0,
          leading: IconButton(
              key: const Key("doctor_details_screen_button_arrow_back"),
              icon: Icon(Icons.arrow_back),
              color: AppColors.accent,
              onPressed: () {
                Navigator.of(context).pop();
              }),
          backgroundColor: AppColors.primary,
...
