import 'dart:io';
import 'package:doctor_bima/appStateContainer/app_state_container.dart';
import 'package:doctor_bima/appStateContainer/app_state_model.dart';
import 'package:doctor_bima/bloc/bimaDoctors/bima_doctors_state.dart';
import 'package:doctor_bima/generated/l10n.dart';
import 'package:doctor_bima/models/doctors_list_model.dart';
import 'package:doctor_bima/navigation/routes.dart';
import 'package:doctor_bima/resources/images/images.dart';
import 'package:doctor_bima/style/app_colors.dart';
import 'package:doctor_bima/style/font.dart';
import 'package:doctor_bima/style/spacing.dart';
import 'package:flutter/material.dart';
import 'package:flutter_bloc/flutter_bloc.dart';
import 'package:doctor_bima/bloc/bimaDoctors/bima_doctors_bloc.dart';
import 'package:doctor_bima/bloc/bimaDoctors/bima_doctors_event.dart';
import 'package:scoped_model/scoped_model.dart';

final RouteObserver<PageRoute> routeObserver = RouteObserver<PageRoute>();

class HomeScreen extends StatefulWidget {
  HomeScreen() : super();

  @override
  _HomeScreenState createState() => _HomeScreenState();
}

class _HomeScreenState extends State<HomeScreen> with RouteAware {
  final GlobalKey<ScaffoldState> _scaffoldkey = GlobalKey<ScaffoldState>();
  StateContainerState appStateContainer;
  AppStateModel appStateModel;

  @override
  void initState() {
    super.initState();

    BlocProvider.of<BimaDoctorsBloc>(context)
        .add(GetBimaDoctorsListEvent(context: context));
  }

  @override
  void didPush() {}

  @override
  void didPopNext() async {
    BlocProvider.of<BimaDoctorsBloc>(context)
        .add(GetBimaDoctorsListEvent(context: context));
  }

  @override
  void didChangeDependencies() {
    super.didChangeDependencies();
    routeObserver.subscribe(this, ModalRoute.of(context));
    appStateContainer = StateContainer.of(context);
    appStateModel = ScopedModel.of<AppStateModel>(context);
  }

  @override
  void didUpdateWidget(HomeScreen oldWidget) {
    super.didUpdateWidget(oldWidget);
  }

  @override
  void dispose() {
    super.dispose();
    routeObserver.unsubscribe(this);
  }

  Future<bool> _onBackPressed(BuildContext context) async {
    return true;
  }

  Widget bimaDoctorTileWidget(DoctorDetailsModel doctorsDetailsModel) {
    return ListTile(
      key: const Key("home_screen_tile"),
      onTap: () {
        Navigator.pushNamed(context, Routes.doctorDetailsScreen,
            arguments: doctorsDetailsModel);
      },
      leading: CircleAvatar(
        radius: 20.0,
        backgroundImage: NetworkImage("${doctorsDetailsModel?.profile_pic}"),
        backgroundColor: Colors.transparent,
      ),
      title: Text("${doctorsDetailsModel?.first_name ?? ""}",
          textAlign: TextAlign.start,
          overflow: TextOverflow.ellipsis,
          style: TextStyle(
              fontWeight: FontWeight.bold,
              fontSize: AppFontSize.subtitle,
              color: AppColors.primary)),
      subtitle: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        mainAxisAlignment: MainAxisAlignment.start,
        children: [
          Text("${doctorsDetailsModel?.specialization?.toUpperCase() ?? ""}",
              textAlign: TextAlign.start,
              overflow: TextOverflow.ellipsis,
              style: TextStyle(
                  fontWeight: FontWeight.normal,
                  fontSize: AppFontSize.subtitle,
                  color: AppColors.primary)),
          AppSpacing.sizeBoxHt5,
          Text("${doctorsDetailsModel?.description ?? ""}",
              textAlign: TextAlign.start,
              overflow: TextOverflow.ellipsis,
              maxLines: 2,
              style: TextStyle(
                  fontWeight: FontWeight.normal,
                  fontSize: AppFontSize.small,
                  color: AppColors.grey)),
        ],
      ),
      trailing: Icon(
        Icons.keyboard_arrow_right,
        color: AppColors.primary,
        size: 24,
      ),
    );
  }

  @override
  Widget build(BuildContext context) {
    return WillPopScope(
      onWillPop: () => _onBackPressed(context),
      child: Scaffold(
          key: _scaffoldkey,
          drawer: Drawer(
            child: ListView(
              padding: EdgeInsets.zero,
              children: [
                const DrawerHeader(
                  decoration: BoxDecoration(
                    color: AppColors.primary,
                  ),
                  child: Center(child: Text("Welcome to DOCTOR BIMA")),
                ),
              ],
            ),
          ),
          appBar: AppBar(
            centerTitle: false,
            iconTheme: IconThemeData(color: AppColors.primary),
            title: Row(
              mainAxisAlignment: MainAxisAlignment.spaceBetween,
              children: [
                Image.asset(
                  ImageAsset.launchImage,
                  fit: BoxFit.contain,
                  height: 40,
                ),
                Image.asset(
                  ImageAsset.icLauncher,
                  fit: BoxFit.contain,
                  height: 40,
                ),
              ],
            ),
            backgroundColor: AppColors.white,
          ),
          body: BlocConsumer<BimaDoctorsBloc, BimaDoctorsState>(
            listenWhen: (previous, current) => true,
            listener: (BuildContext context, BimaDoctorsState state) {
              if (state is GetDoctorsListFailureState) {
                _scaffoldkey.currentState.showSnackBar(SnackBar(
                    content: Text(Strings.of(context).somethingWentWrong)));
              }
            },
            buildWhen: (previous, current) => true,
            builder: (BuildContext context, BimaDoctorsState state) {
              final StateContainerState appStateContainer =
                  StateContainer.of(context);
              if (state is GetDoctorsListInitialState ||
                  state is GetDoctorsListLoadingState) {
                return Center(
                  child: CircularProgressIndicator(
                    strokeWidth: 2,
                    valueColor:
                        AlwaysStoppedAnimation<Color>(AppColors.primary),
                  ),
                );
              } else if (state is GetDoctorsListSuccessState) {
                return ListView(
                  children: [
                    Center(
                        child: Text(
                            "Inherited Widget: ${appStateContainer.areDetailsUpdated}")),
                    AppSpacing.sizeBoxHt10,
                    Center(
                        child: Text(
                            "Scoped Model: ${appStateModel.areDetailsUpdated}")),
                    SingleChildScrollView(
                        child: Column(
                      children: List.generate(
                          state?.doctorsListModel?.length ?? 0,
                          (index) => Container(
                                child: bimaDoctorTileWidget(
                                    state.doctorsListModel[index]),
                              )),
                    ))
                  ],
                );
              }
              return Container();
            },
          ),
          floatingActionButton: Column(
            mainAxisAlignment: MainAxisAlignment.end,
            children: [
              FloatingActionButton(
                heroTag: "long_press",
                key: const Key("home_screen_button_long_press"),
                onPressed: () {
                  Navigator.pushNamed(context, Routes.longPressScreen);
                },
                child: Icon(Icons.local_dining),
                backgroundColor: AppColors.primary,
              ),
              AppSpacing.sizeBoxHt10,
              FloatingActionButton(
                heroTag: "drag_drop",
                key: const Key("home_screen_button_drag_drop"),
                onPressed: () {
                  Navigator.pushNamed(context, Routes.dragDropScreen);
                },
                child: Icon(Icons.drag_handle_rounded),
                backgroundColor: AppColors.primary,
              ),
              AppSpacing.sizeBoxHt10,
              FloatingActionButton(
                heroTag: "file_upload",
                key: const Key("home_screen_button_file_upload"),
                onPressed: () {
                  Navigator.pushNamed(context, Routes.filePickerScreen);
                },
                child: Icon(Icons.upload),
                backgroundColor: AppColors.primary,
              ),
            ],
          )),
    );
  }
}
